# rustygrep

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  prepush.py  raw_errors.txt  test_errors.txt
.github/workflows/: ci.yml  release.yml
.omc/: project-memory.json
.omc/state/: agent-replay-bdb7b87c-bfc6-4ce8-b910-aaac210af064.jsonl  idle-notif-cooldown.json
.omc/state/checkpoints/: checkpoint-2026-07-17T06-23-20-509Z.json
.omc/state/sessions/bdb7b87c-bfc6-4ce8-b910-aaac210af064/: last-tool-error-state.json  pre-tool-advisory-throttle.json  session-started.json  subagent-tracking-state.json
benches/: search.rs
completions/: _rustygrep.zsh  rustygrep.bash  rustygrep.fish
docs/: COMPETITIVE-ANALYSIS.md  PRD-v0.1.1.md  ROADMAP.md
src/: cli.rs  init.rs  lib.rs  main.rs  mcp.rs  search.rs  walker.rs
src/output/: json.rs  llm.rs  mod.rs  pretty.rs
tests/: cli_test.rs  json_output_test.rs  llm_output_test.rs  mcp_test.rs  pretty_output_test.rs  search_test.rs  walker_test.rs
tests/common/: mod.rs
