[package]
name = "rustygrep"
version = "0.1.0"
edition = "2021"
description = "Fast grep with AI-native output. Token-compressed results for LLM coding agents."
license = "MIT"
repository = "https://github.com/AkashPriyadarshii/rustygrep"
keywords = ["grep", "search", "cli", "ai", "llm"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
clap = { version = "4", features = ["derive"] }
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
ignore = "0.4"
memchr = "2"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "search"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
